# ChangeLog for media-video/avifile
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/ChangeLog,v 1.83 2004/11/16 08:51:01 phosphan Exp $

  16 Nov 2004; Patrick Kursawe <phosphan@gentoo.org>
  avifile-0.7.41.20041001.ebuild:
  Adding compile bug fixes from -r1

*avifile-0.7.41.20041001-r1 (12 Nov 2004)

  12 Nov 2004; Patrick Kursawe <phosphan@gentoo.org>
  +files/avifile-0.7.41.20041001-gcc2.patch,
  +avifile-0.7.41.20041001-r1.ebuild:
  Fixing bug #67441 (configure script stripped -g from CFLAGS - even in the
  middle of a word), bug #68899 (hard-coded -lXrender in some Makefile, removing
  it if not using X), bug #70074 (doesn't compile with gcc 2.95) and
  bug #69511 (parts of the build did not use our CFLAGS)

  23 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  avifile-0.7.41.20041001.ebuild:
  Disabling maketest for now because of bug #66740.

  22 Oct 2004; Patrick Kursawe <phosphan@gentoo.org>
  avifile-0.7.41.20041001.ebuild:
  Older versions seem to cause more trouble than .41 - declaring stable for x86.

  07 Oct 2004; Patrick Kursawe <phosphan@gentoo.org> files/throw.patch:
  throw.patch finally works with latest glibc versions - closing bug #64893.
  Modifying postinst to only show the message if the file it refers to was
  actually built. (closing bug #56973)

  06 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  avifile-0.7.41.20041001.ebuild:
  get_libdir fixes.

  06 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +files/avifile-0.7.41.20041001-sparc.patch,
  avifile-0.7.41.20041001.ebuild:
  Recreated sparc CFLAGS patch, but still -sparc.  Readded to ~amd64.
  Closes bug #66422.

  06 Oct 2004; Patrick Kursawe <phosphan@gentoo.org> files/throw.patch:
  Patch was broken (bug #64893)

  06 Oct 2004; Patrick Kursawe <phosphan@gentoo.org> +files/throw.patch,
  avifile-0.7.41.20041001.ebuild:
  Fixing wrong attribute locations in source, see bug #64893
