@@ -2,8 +2,8 @@ MD5 6d85afc659f23bb2adcebd144400833d avifile-0.7.38.20030710.ebuild 4488
 MD5 b80546f1e5f52f38abec15e91478e999 avifile-0.7.38.20030710-r1.ebuild 4008
 MD5 ab24ec7446ec73e983a093e98b7f99df avifile-0.7.32.20030219.ebuild 4062
 MD5 1baa65ea96f3b2ab8559450b2fbde876 avifile-0.7.41.20041001.ebuild 4284
-MD5 d38cb0de9fcf83328770f19f45aa8cd3 avifile-0.7.41.20041001-r1.ebuild 4325
-MD5 e4659abac09fc6d39eea9a3130442dff ChangeLog 14596
+MD5 8a616e9640f57a62152d26753245b610 avifile-0.7.41.20041001-r1.ebuild 4591
+MD5 4e22bca9c22850a5e4e0b03d5a9f926a ChangeLog 14783
 MD5 76b95bd390c69f39e5e7b028b3ff69a5 metadata.xml 272
 MD5 f003a1fc700f9a79cf12c06d2ac3bedd avifile-0.7.37.20030522-r2.ebuild 4432
 MD5 8390bf9de24635d667a5724c2cc0cbe9 files/avifile-0.7.37.20030522-divx.patch 11943
