@@ -1,6 +1,11 @@
 # ChangeLog for media-video/avifile
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/ChangeLog,v 1.83 2004/11/16 08:51:01 phosphan Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/ChangeLog,v 1.84 2004/11/26 11:25:59 phosphan Exp $
+
+  26 Nov 2004; Patrick Kursawe <phosphan@gentoo.org>
+  avifile-0.7.41.20041001-r1.ebuild:
+  Fixing bug #70920 (fails to build on platforms that don't know
+  no-omit-leaf-frame-pointer).
 
   16 Nov 2004; Patrick Kursawe <phosphan@gentoo.org>
   avifile-0.7.41.20041001.ebuild:
